@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2022 Jeffrey H. Johnson <trnsz@pobox.com>
+ * Copyright (c) 2022 Ørjan Malde <red@foxi.me>
  *
  * All rights reserved.
  *
@@ -31,21 +32,27 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+#include "../include/compat.h"
+
 #include <errno.h>
+
 #if ( defined(__GLIBC__) && defined(__GLIBC_MINOR__) ) \
-        || defined(__linux__) || defined(__midipix__)
+         || defined(__linux__) || defined(__midipix__)
 # include <sys/auxv.h>
 #else
 # include <unistd.h>
 #endif /* if ( defined(__GLIBC__) && defined(__GLIBC_MINOR__) )
-        || defined(__linux__) || defined(__midipix__) */
+                  || defined(__linux__) || defined(__midipix__) */
+
 #if defined(__FreeBSD__) || defined(__OpenBSD__) \
-        || ( defined(__APPLE__ ) && defined(__MACH__) )
+       || ( defined(__APPLE__ ) && defined(__MACH__) )
 # include <unistd.h>
 #else
+
 # ifdef __linux__
 #  include <elf.h>
 # endif
+
 int
 issetugid(void)
 {
